[gd_scene load_steps=20 format=2]

[ext_resource path="res://ui-assets/1920x1080_white.svg" type="Texture" id=1]
[ext_resource path="res://ui-assets/building-machinedrawer.svg" type="Texture" id=2]
[ext_resource path="res://Levels/Level6/Level6HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Level6/Level6Drawer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Level6/Level6.gd" type="Script" id=5]
[ext_resource path="res://Levels/Level6/Level6Grid.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/conveyor_straight.svg" type="Texture" id=7]
[ext_resource path="res://assets/conveyor_curved_ccw.svg" type="Texture" id=8]
[ext_resource path="res://assets/conveyor_curved_cw.svg" type="Texture" id=9]
[ext_resource path="res://Levels/Level4/Label.gd" type="Script" id=10]
[ext_resource path="res://Levels/Level3/Dye.gd" type="Script" id=11]
[ext_resource path="res://Levels/Level5/Color_shirt.gd" type="Script" id=12]
[ext_resource path="res://Levels/Level2/Frabic.gd" type="Script" id=13]
[ext_resource path="res://Levels/Level2/Shirt.gd" type="Script" id=14]
[ext_resource path="res://Levels/Level6/Pack(DyeShirt).gd" type="Script" id=15]
[ext_resource path="res://Levels/Level1/money.gd" type="Script" id=16]
[ext_resource path="res://Levels/Level6/pack fabric.gd" type="Script" id=17]
[ext_resource path="res://assets/real like.png" type="Texture" id=18]
[ext_resource path="res://Levels/Level6/Popup.gd" type="Script" id=19]

[node name="Level6" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridBackground" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="DrawerBackground" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Level6HUD" parent="." instance=ExtResource( 3 )]

[node name="money" type="Label" parent="Level6HUD"]
margin_left = 201.0
margin_top = 70.0
margin_right = 256.0
margin_bottom = 84.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Money : "
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dye" type="Label" parent="Level6HUD"]
margin_left = 201.0
margin_top = 98.0
margin_right = 241.0
margin_bottom = 112.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Dye : "
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thread" type="Label" parent="Level6HUD"]
margin_left = 201.0
margin_top = 125.0
margin_right = 251.0
margin_bottom = 139.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Thread : "
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fabric" type="Label" parent="Level6HUD"]
margin_left = 201.0
margin_top = 154.0
margin_right = 242.0
margin_bottom = 168.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Fabric : "
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shirt" type="Label" parent="Level6HUD"]
margin_left = 326.0
margin_top = 70.0
margin_right = 430.0
margin_bottom = 84.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Shirt : "
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color_fabric" type="Label" parent="Level6HUD"]
margin_left = 326.0
margin_top = 98.0
margin_right = 412.0
margin_bottom = 112.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Color fabric  : "
script = ExtResource( 12 )

[node name="pack color fabric" type="Label" parent="Level6HUD"]
margin_left = 326.0
margin_top = 125.0
margin_right = 474.0
margin_bottom = 139.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Packed colored fabric : "
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pack shirt" type="Label" parent="Level6HUD"]
margin_left = 326.0
margin_top = 154.0
margin_right = 425.0
margin_bottom = 168.0
rect_scale = Vector2( 1.25, 1.25 )
text = "Packed shirt :"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="objective" type="Label" parent="Level6HUD"]
margin_left = 316.0
margin_top = 181.0
margin_right = 481.0
margin_bottom = 229.0
text = "objective :
- 5 packed shirt
- 15 packed colored fabric"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level6Drawer" parent="." instance=ExtResource( 4 )]

[node name="Level6Grid" parent="." instance=ExtResource( 6 )]

[node name="belt" type="Node" parent="."]

[node name="ConveyorStraight" type="Sprite" parent="belt"]
position = Vector2( 1459, 456 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorCurvedCcw" type="Sprite" parent="belt"]
position = Vector2( 630, 289 )
rotation = 3.14159
texture = ExtResource( 8 )

[node name="ConveyorCurvedCcw3" type="Sprite" parent="belt"]
position = Vector2( 1790, 456 )
rotation = 1.5708
texture = ExtResource( 8 )

[node name="ConveyorCurvedCw2" type="Sprite" parent="belt"]
position = Vector2( 1293, 290 )
rotation = 1.5708
texture = ExtResource( 9 )

[node name="ConveyorCurvedCcw4" type="Sprite" parent="belt"]
position = Vector2( 796, 454 )
rotation = -3.14159
texture = ExtResource( 8 )

[node name="ConveyorStraight3" type="Sprite" parent="belt"]
position = Vector2( 1126, 457 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorStraight5" type="Sprite" parent="belt"]
position = Vector2( 961, 290 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorStraight6" type="Sprite" parent="belt"]
position = Vector2( 1625, 456 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorStraight7" type="Sprite" parent="belt"]
position = Vector2( 1789, 290 )
texture = ExtResource( 7 )

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="Popup"]
position = Vector2( 1289, 596 )
texture = ExtResource( 18 )
